--- a/.github/workflows/approve.yml
+++ b/.github/workflows/approve.yml
@@ -2,17 +2,18 @@ name: Auto Approve for Specific Users
 
 on:
   pull_request:
-    types: [opened, synchronize]
+    types: [opened, reopened, synchronize]
 
 jobs:
   auto-approve:
     runs-on: ubuntu-latest
     steps:
-      - name: Check if user is allowed to bypass rules
-        env:
-          ALLOWED_USERS: "petukhoudzmitry"
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set approval environment variable
         run: |
-          if echo "$ALLOWED_USERS" | grep -w "$GITHUB_ACTOR"; then
+          if [ "$GITHUB_ACTOR" = "petukhoudzmitry" ]; then
             echo "User $GITHUB_ACTOR is allowed to auto-approve."
             echo "APPROVE_ALLOWED=true" >> $GITHUB_ENV
           else
@@ -22,11 +23,9 @@ jobs:
 
       - name: Get Pull Request Number
         if: env.APPROVE_ALLOWED == 'true'
-        run: |
-          PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
-          echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_ENV
+        run: echo "PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")" >> $GITHUB_ENV
 
-      - name: Approve Pull Request
+      - name: Approve pull request
         if: env.APPROVE_ALLOWED == 'true'
         run: gh pr review --approve "$PR_NUMBER"
         env:
