--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,9 @@
 [versions]
 oshi = "6.6.6"
 springBoot = "3.4.3"
+springDependencyManagement = "1.1.7"
+javaFx = "0.0.13"
+jlink = "2.25.0"
 
 [libraries]
 springBootParent = { module = "org.springframework.boot:spring-boot-starter-parent", version.ref = "springBoot" }
@@ -18,3 +21,8 @@ testing = [
     "springBootTest",
     "junitJupiter",
 ]
+[plugins]
+springBoot = { id = "org.springframework.boot", version.ref = "springBoot" }
+springDependencyManagement = { id = "io.spring.dependency-management", version.ref = "springDependencyManagement" }
+javaFx = { id = "org.openjfx.javafxplugin", version.ref = "javaFx" }
+jlink = { id = "org.beryx.jlink", version.ref = "jlink" }
