Add user 'petukhoudzmitry' to allowed users in GitHub Actions workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: Check user permission
         run: |
-          ALLOWED_USERS=("ikvict07")
+          ALLOWED_USERS=("ikvict07" "petukhoudzmitry")
           if [[ " ${ALLOWED_USERS[@]} " =~ " ${GITHUB_ACTOR} " ]]; then
             echo "User $GITHUB_ACTOR is allowed. Skipping build."
             exit 0
