--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,9 @@ springBoot = "3.4.3"
 springDependencyManagement = "1.1.7"
 javaFx = "0.0.13"
 jlink = "2.25.0"
-
+log4j = "2.24.3"
+mockito = "5.14.0"
+jackon = "2.13.0"
 [libraries]
 springBootParent = { module = "org.springframework.boot:spring-boot-starter-parent", version.ref = "springBoot" }
 springBoot = { module = "org.springframework.boot:spring-boot-starter" }
@@ -12,6 +14,9 @@ springBootTest = { module = "org.springframework.boot:spring-boot-starter-test" 
 oshiCore = { module = "com.github.oshi:oshi-core", version.ref = "oshi" }
 lombok = { module = "org.projectlombok:lombok" }
 junitJupiter = { module = "org.junit.platform:junit-platform-launcher" }
+log4j = { module = "org.apache.logging.log4j:log4j-api", version.ref = "log4j" }
+mockito = { module = "org.mockito:mockito-core", version.ref = "mockito" }
+jacksonXml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-xml", version.ref = "jackon" }
 [bundles]
 spring = [
     "springBootParent",
@@ -20,6 +25,7 @@ spring = [
 testing = [
     "springBootTest",
     "junitJupiter",
+    "mockito",
 ]
 [plugins]
 springBoot = { id = "org.springframework.boot", version.ref = "springBoot" }
