--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,9 @@ jobs:
 
       - name: Set approval environment variable
         run: |
-          if [ "$GITHUB_ACTOR" = "petukhoudzmitry" ]; then
+          ALLOWED_USERS=("petukhoudzmitry" "ikvict07")
+
+          if [[ " ${ALLOWED_USERS[@]} " =~ " $GITHUB_ACTOR " ]]; then
             echo "User $GITHUB_ACTOR is allowed to auto-approve."
             echo "APPROVE_ALLOWED=true" >> $GITHUB_ENV
           else
