--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Prolific
 
 project.fxml-location= components
-project.settings-location= ../settings
+project.settings-location= ./settings
+spring.main.allow-circular-references=true
