--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,8 @@ springBoot = "3.4.3"
 springDependencyManagement = "1.1.7"
 javaFx = "0.0.13"
 jlink = "2.25.0"
+log4j = "2.24.3"
+mock = "5.14.0"
 
 [libraries]
 springBootParent = { module = "org.springframework.boot:spring-boot-starter-parent", version.ref = "springBoot" }
@@ -12,6 +14,9 @@ springBootTest = { module = "org.springframework.boot:spring-boot-starter-test" 
 oshiCore = { module = "com.github.oshi:oshi-core", version.ref = "oshi" }
 lombok = { module = "org.projectlombok:lombok" }
 junitJupiter = { module = "org.junit.platform:junit-platform-launcher" }
+logging = { module = "org.apache.logging.log4j:log4j-api", version.ref = "log4j" }
+mockito = { module = "org.mockito:mockito-core", version.ref = "mock" }
+
 [bundles]
 spring = [
     "springBootParent",
@@ -21,8 +26,11 @@ testing = [
     "springBootTest",
     "junitJupiter",
 ]
+
 [plugins]
 springBoot = { id = "org.springframework.boot", version.ref = "springBoot" }
 springDependencyManagement = { id = "io.spring.dependency-management", version.ref = "springDependencyManagement" }
 javaFx = { id = "org.openjfx.javafxplugin", version.ref = "javaFx" }
 jlink = { id = "org.beryx.jlink", version.ref = "jlink" }
+application = { id = "application" }
+maven-publish = { id = "maven-publish" }
