--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,27 +9,40 @@ on:
       - 'main'
 
 jobs:
-  build:
+  CheckUserPermission:
     runs-on: ubuntu-latest
+    outputs:
+      allowed: ${{ steps.check-permission.outputs.allowed }}
 
     steps:
       - name: Check user permission
+        id: check-permission
         run: |
           ALLOWED_USERS=("ikvict07" "petukhoudzmitry")
           if [[ " ${ALLOWED_USERS[@]} " =~ " ${GITHUB_ACTOR} " ]]; then
             echo "User $GITHUB_ACTOR is allowed. Skipping build."
-            exit 0
+            echo "allowed=true" >> $GITHUB_ENV
+          else
+            echo "User $GITHUB_ACTOR is not allowed. Exiting."
+            echo "allowed=false" >> $GITHUB_ENV
+            exit 1
           fi
         shell: bash
 
+  build:
+    needs: CheckUserPermission
+    runs-on: ubuntu-latest
+    if: ${{ needs.CheckUserPermission.outputs.allowed == 'false' }}
+
+    steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK 21
+      - name: Set up JDK 23
         uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
-          java-version: '21'
+          java-version: '23'
 
       - name: Cache Gradle dependencies
         uses: actions/cache@v2
