--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=Prolific
 project.fxml-location= components
 project.settings-location= ./settings
 spring.main.allow-circular-references=true
+spring.aop.proxy-target-class=true
+spring.datasource.url=jdbc:sqlite:prolific.sqlite
