--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ project.fxml-location= components
 project.settings-location= ./settings
 spring.aop.proxy-target-class=true
 spring.datasource.url=jdbc:sqlite:prolific.sqlite
+
+logging.file.path=/Users/antonhorobets/Documents
+logging.file.name=prolific.log
+
