--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,13 +3,14 @@ oshi = "6.6.6"
 springBoot = "3.4.3"
 springDependencyManagement = "1.1.7"
 javaFx = "0.0.13"
-jlink = "2.25.0"
 log4j = "2.24.3"
 jackson = "2.18.2"
 jscksonTypes = "2.18.2"
 mock = "5.14.0"
 sqlite = "3.49.1.0"
 hikari = "6.2.1"
+beryx = "1.12.2"
+
 [libraries]
 springBootParent = { module = "org.springframework.boot:spring-boot-starter-parent", version.ref = "springBoot" }
 springBoot = { module = "org.springframework.boot:spring-boot-starter" }
@@ -40,6 +41,7 @@ testing = [
 springBoot = { id = "org.springframework.boot", version.ref = "springBoot" }
 springDependencyManagement = { id = "io.spring.dependency-management", version.ref = "springDependencyManagement" }
 javaFx = { id = "org.openjfx.javafxplugin", version.ref = "javaFx" }
-jlink = { id = "org.beryx.jlink", version.ref = "jlink" }
 application = { id = "application" }
 maven-publish = { id = "maven-publish" }
+jacoco = { id = "jacoco" }
+beryx = { id = "org.beryx.runtime", version.ref = "beryx" }
