--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=Prolific
 
 project.fxml-location= components
 project.settings-location= ./settings
+project.icon-location= icons/fxml
 project.run-configs-location= ./run-configs
 spring.aop.proxy-target-class=true
 
