--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ mock = "5.14.0"
 sqlite = "3.49.1.0"
 hikari = "6.2.1"
 beryx = "1.12.2"
-
+reactor = "3.7.4"
 [libraries]
 springBootParent = { module = "org.springframework.boot:spring-boot-starter-parent", version.ref = "springBoot" }
 springBoot = { module = "org.springframework.boot:spring-boot-starter" }
@@ -22,9 +22,10 @@ mockito = { module = "org.mockito:mockito-core", version.ref = "mock" }
 jacksonXml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-xml", version.ref = "jackson" }
 jacksonTypes = { module = "com.fasterxml.jackson.datatype:jackson-datatype-jsr310", version.ref = "jscksonTypes" }
 logging = { module = "org.apache.logging.log4j:log4j-api", version.ref = "log4j" }
-sqlite = { module = "org.xerial:sqlite-jdbc", version.ref = "sqlite"}
+sqlite = { module = "org.xerial:sqlite-jdbc", version.ref = "sqlite" }
 springAop = { module = "org.springframework.boot:spring-boot-starter-aop" }
 hikari = { module = "com.zaxxer:HikariCP", version.ref = "hikari" }
+reactor = { module = "io.projectreactor:reactor-core", version.ref = "reactor" }
 [bundles]
 spring = [
     "springBootParent",
