--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ sqlite = "3.49.1.0"
 hikari = "6.2.1"
 beryx = "1.12.2"
 reactor = "3.7.4"
+richtext = "0.11.4"
+
 [libraries]
 springBootParent = { module = "org.springframework.boot:spring-boot-starter-parent", version.ref = "springBoot" }
 springBoot = { module = "org.springframework.boot:spring-boot-starter" }
@@ -26,6 +28,7 @@ sqlite = { module = "org.xerial:sqlite-jdbc", version.ref = "sqlite" }
 springAop = { module = "org.springframework.boot:spring-boot-starter-aop" }
 hikari = { module = "com.zaxxer:HikariCP", version.ref = "hikari" }
 reactor = { module = "io.projectreactor:reactor-core", version.ref = "reactor" }
+richtext = { module = "org.fxmisc.richtext:richtextfx", version.ref = "richtext"}
 [bundles]
 spring = [
     "springBootParent",
