--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,15 @@ jobs:
             exit 0
           fi
 
+      - name: Check if PR is self-authored
+        if: env.APPROVE_ALLOWED == 'true'
+        run: |
+          PR_AUTHOR=$(jq --raw-output .pull_request.user.login "$GITHUB_EVENT_PATH")
+          if [[ "$PR_AUTHOR" == "$GITHUB_ACTOR" ]]; then
+            echo "Self-approval is not allowed. Exiting the auto-approve step..."
+            exit 0
+          fi
+
       - name: Get Pull Request Number
         if: env.APPROVE_ALLOWED == 'true'
         run: echo "PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")" >> $GITHUB_ENV
