--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
           PR_AUTHOR=$(jq --raw-output .pull_request.user.login "$GITHUB_EVENT_PATH")
           if [[ "$PR_AUTHOR" == "$GITHUB_ACTOR" ]]; then
             echo "Self-approval is not allowed. Exiting the auto-approve step..."
+            echo "APPROVE_ALLOWED=false" >> $GITHUB_ENV
             exit 0
           fi
 
