--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,19 @@ jobs:
             echo "APPROVE_ALLOWED=true" >> $GITHUB_ENV
           else
             echo "User $GITHUB_ACTOR is NOT allowed to auto-approve."
-            echo "APPROVE_ALLOWED=false" >> $GITHUB_ENV
             exit 0
+          fi
+
+      - name: Check pr author
+        if: env.APPROVE_ALLOWED == 'true'
+        run: |
+          PR_AUTHOR=$(jq --raw-output .pull_request.user.login "$GITHUB_EVENT_PATH")
+          echo "Pull request author: $PR_AUTHOR"
+          if [[ "$PR_AUTHOR" == "ikvict07" ]]; then
+            echo "PR author is ikvict07, skipping auto-approval."
+            exit 0
+          else
+            echo "PR author is not ikvict07, continuing with auto-approval."
           fi
 
       - name: Get Pull Request Number
