--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,7 @@ mockito = { module = "org.mockito:mockito-core", version.ref = "mock" }
 jacksonXml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-xml", version.ref = "jackson" }
 jacksonTypes = { module = "com.fasterxml.jackson.datatype:jackson-datatype-jsr310", version.ref = "jscksonTypes" }
 logging = { module = "org.apache.logging.log4j:log4j-api", version.ref = "log4j" }
+log4j-core = { module = "org.apache.logging.log4j:log4j-core", version.ref = "log4j" }
 sqlite = { module = "org.xerial:sqlite-jdbc", version.ref = "sqlite" }
 springAop = { module = "org.springframework.boot:spring-boot-starter-aop" }
 hikari = { module = "com.zaxxer:HikariCP", version.ref = "hikari" }
