--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+# Ignore log files and logs folder
+logs/
+logs/*.log
+
 ### STS ###
 .apt_generated
 .classpath
