--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ project.fxml-location= components
 project.settings-location= ./settings
 project.icon-location= icons/fxml
 project.run-configs-location= ./run-configs
+project.guides-url=https://github.com/ikvict07/Prolific/blob/guides/guides/
 spring.aop.proxy-target-class=true
